
- Session:
  . Fixed bug #69582 (session not readable by root in CLI). (EvgeniySpinov)

- Standard:
  . Fixed bug #69442 (closing of fd incorrect when PTS enabled). (jaytaph)
  . Fixed bug #47021 (SoapClient stumbles over WSDL delivered with
    "Transfer-Encoding: chunked"). (Rowan Collins)
  . Fixed bug #72974 (imap is undefined service on AIX). (matthieu.sarter)

- ZIP:
  . Fixed bug #70103 (ZipArchive::addGlob ignores remove_all_path option). (cmb,
    Mitch Hagstrand)

19 Jan 2017 PHP 7.0.15

- Core:
  . Fixed bug #73792 (invalid foreach loop hangs script). (Dmitry)
  . Fixed bug #73663 ("Invalid opcode 65/16/8" occurs with a variable created
    with list()). (Laruence)
  . Fixed bug #73585 (Logging of "Internal Zend error - Missing class
    information" missing class name). (Laruence)
  . Fixed bug #73753 (unserialized array pointer not advancing). (David Walker)

- COM:
  . Fixed bug #73679 (DOTNET read access violation using invalid codepage).
    (Anatol)

- DOM:
  . Fixed bug #67474 (getElementsByTagNameNS filter on default ns). (aboks)

- Mysqli:
  . Fixed bug #73462 (Persistent connections don't set $connect_errno).
    (darkain)

- Mysqlnd:
  . Fixed issue with decoding BIT columns when having more than one rows in the
    result set. 7.0+ problem. (Andrey)
  . Fixed bug #73800 (sporadic segfault with MYSQLI_OPT_INT_AND_FLOAT_NATIVE). 
	(vanviegen)

- PCRE:
  . Fixed bug #73612 (preg_*() may leak memory). (cmb)

- PDO_Firebird:
  . Fixed bug #72931 (PDO_FIREBIRD with Firebird 3.0 not work on returning
    statement). (Dorin Marcoci)

- Streams:
  . Fixed bug #73586 (php_user_filter::$stream is not set to the stream the
    filter is working on). (Dmitry)

- Phpdbg:
  . Fixed bug #73615 (phpdbg without option never load .phpdbginit at startup).
    (Bob)
  . Fixed issue getting executable lines from custom wrappers. (Bob)
  . Fixed bug #73704 (phpdbg shows the wrong line in files with shebang). (Bob)

- Reflection: